# TuringCompiler

./: README.md  test.py
compiler/: Cargo.toml
compiler/src/: AST  AST.rs  Lexer  Lexer.rs  input.txt  lexer.rs  lexer_types.rs  main.rs  phase1_lexer.rs  phase2_ast.rs  tempCodeRunnerFile.rs
compiler/src/0Depricated/: phase1_lexer.rs  phase2_ast.rs
compiler/src/0Depricated/compiler-steps/: step1.json  step2.json
compiler/src/1Lexer/: test.rs
compiler/src/1Lexer/compiler-steps/: step1.json  step2.json
compiler/src/compiler-steps/: step1.json  step2.json
